<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Task Manager Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Just dummz text</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">RegisterActivity</string>


    <string name="place_holder">Place Holder</string>
    <string name="checkbox">CheckBox</string>

    <string name="save">Save</string>
    <string name="select">Select End Date</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="subtask">Subtask Name</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="calendar_icon_description">End Date Selector</string>
    <string name="calendar_icon">Start Date Selector</string>
    <string name="add_button">+</string>
    <string name="submit">Submit</string>
    <string name="enter">Enter Description</string>
    <string name="taskName">Enter Task Name</string>
    <string name="describe">Description</string>
    <string name="task">Task Name</string>
    <string name="add_subtask">Add Subtask</string>
    <string name="subtasks">Subtasks</string>
    <string name="Tasks">Tasks</string>
    <string name="sub">Subtask name</string>
    <string name="Add_Notes">Add Notes</string>
    <string name="cancel">Cancel</string>
    <string name="comment">Comment</string>
    <string name="add_notes">Add notes .....</string>
    <string name="Attach_Resources">Attach Resources</string>

</resources>