<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddTaskActivity">

    <!-- Task Name -->
    <TextView
        android:id="@+id/textTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTaskName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/textTaskName"
        android:layout_marginTop="48dp"
        android:autofillHints="Task name"
        android:hint="@string/taskName"
        android:inputType="text"
        android:textColorHint="@color/purple" />

    <!-- Task Description -->
    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/describe"
        android:layout_below="@id/editTaskName"
        android:layout_marginTop="48dp"
        android:textColorHint="#6D4C41"/>

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/textDescription"
        android:layout_marginTop="8dp"
        android:autofillHints="description"
        android:hint="@string/enter"
        android:inputType="textMultiLine"
        android:textColorHint="@color/black" />

    <!-- Start Date -->
    <RelativeLayout
        android:id="@+id/layoutStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editDescription"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startDate"
            android:layout_alignParentStart="true"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/imageViewStartDate"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:contentDescription="@string/calendar_icon"
            android:focusable="true"
            android:src="@drawable/ic_calendar" />
    </RelativeLayout>

    <!-- End Date -->
    <RelativeLayout
        android:id="@+id/layoutEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutStartDate"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endDate"
            android:layout_alignParentStart="true"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/imageViewEndDate"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:src="@drawable/ic_calendar"
            android:layout_alignParentEnd="true"
            android:clickable="true"

            android:contentDescription="@string/calendar_icon_description"
            android:focusable="true" />
    </RelativeLayout>

    <!-- Add Subtask Button -->
<!--    <Button-->
<!--        android:id="@+id/addButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/layoutEndDate"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="32dp"-->
<!--        android:background="@drawable/add_button"-->
<!--        android:text="@string/add_button"-->
<!--        android:textSize="18sp"-->
<!--        android:textStyle="bold"-->
<!--        android:textColor="@android:color/white"-->
<!--        android:paddingStart="12dp"-->
<!--        android:paddingEnd="12dp"-->
<!--        android:paddingTop="8dp"-->
<!--        android:paddingBottom="8dp" />-->


    <!-- Submit Button -->
    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutEndDate"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:enabled="false" />




</RelativeLayout>