<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    android:background="@drawable/mobb">

    <!-- Subtask Title -->
    <TextView
        android:id="@+id/subtaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/subtasks"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/Tasks"/>

    <!-- RecyclerView for displaying subtasks -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/subtasksRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtaskTitle"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:nestedScrollingEnabled="true" />

    <!-- Add Subtask Button -->
    <Button
        android:id="@+id/addSubtaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_subtask"
        android:layout_below="@id/subtasksRecyclerView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="false"
        android:layout_marginTop="8dp" />

    <!-- Comments Section with CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/commentsCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addSubtaskButton"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Comments EditText -->
            <EditText
                android:id="@+id/commentsEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_toStartOf="@id/attachment"
                android:autofillHints="name"
                android:hint="@string/Add_Notes"
                android:inputType="text"
                android:backgroundTint="@android:color/transparent" />

            <!-- Cancel Button -->
            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_below="@id/commentsEditText"
                android:layout_marginTop="8dp"
                android:layout_alignParentStart="true" />

            <!-- Comment Button -->
            <Button
                android:id="@+id/commentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:layout_below="@id/commentsEditText"
                android:layout_marginTop="8dp"
                android:layout_alignParentEnd="true" />

            <!-- Attachment icon-->
            <ImageView
                android:id="@+id/attachment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_attach_file_24"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/Tasks"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
